syntax = "proto3";

package dog;

service Dog{
    rpc GetMyDog (GetMyDogMessage) returns (GetMyDogResponse) {}
    rpc AddMyDog (AddMyDogMessage) returns (AddMyDogResponse){}
}

message GetMyDogMessage{
    string target_dog = 1;
}

message GetMyDogResponse{
    string name = 1;
    string kind = 2;
}

message AddMyDogMessage{
    string name = 1;
    string kind = 2;
}

message AddMyDogResponse{
    string result = 1;
}